--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -27,7 +27,10 @@ lerna-debug.log*
 .settings/
 *.sublime-workspace
 
+prisma/migrations/
+
 # IDE - VSCode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
