--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -40,6 +40,8 @@ allprojects {
 }
 
 dependencies {
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
     def room_version = "1.1.0"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
@@ -51,4 +53,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 }
