revert room version

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -40,8 +40,12 @@ allprojects {
 }
 
 dependencies {
-    implementation 'androidx.room:room-runtime:2.4.0-alpha03'
-    annotationProcessor 'androidx.room:room-compiler:2.4.0-alpha03'
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    def room_version = "1.1.0"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
