--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cookbook">
 
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,11 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CookBook">
-        <activity android:name=".ui.authentication.RegisterActivity"
+
+        <activity
+            android:name=".ui.authentication.RegisterActivity"
             android:exported="true" />
-        <activity android:name=".ui.authentication.LoginActivity"
+        <activity
+            android:name=".ui.authentication.LoginActivity"
             android:exported="true" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".recipe.RecipeActivity"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".recipe.RecipeActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
