--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".recipe.RecipeActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".recipe.ManageRecipe"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
