--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -42,7 +42,7 @@ allprojects {
 dependencies {
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
-
+    implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
