Connect add/edit form with db

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity
             android:name=".recipe.RecipeActivity"
             android:exported="true" />
-        <activity android:name=".recipe.ManageRecipe"
+        <activity android:name=".recipe.ManageRecipeActivity"
             android:exported="true">
         </activity>
     </application>
