--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
